# deescovery

./: .bumpversion.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml
anything_else/: index.html
api/: index.html
api/deescovery/: index.html
api/flask/: index.html
api/matchers/: index.html
deescovery/: __init__.py  discovery.py  flask.py  helpers.py  matchers.py
docs/: anything_else.md  api.md  flask.md  index.md  installation.md  usage.md
docs/api/: deescovery.md  flask.md  helpers.md  matchers.md
docs/examples/: typer.md
examples/ipython/: index.html
examples/typer/: index.html
flask/: index.html
install/: index.html
roman_discovery/: __init__.py  contrib.py  discovery.py  flask.py  matchers.py
search/: search_index.json
tests/: __init__.py  conftest.py  test_discovery.py  test_flask.py  test_matchers.py  test_roman_discovery.py
