[tool.poetry]
name = "roman_discovery"
version = "0.3.0"
homepage = "https://github.com/imankulov/roman_discovery"
description = "Discover packages and classes in a python project."
authors = ["Roman Imankulov <roman.imankulov@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "roman_discovery" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7.8,<4.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-xdist = "^2.2.1"
pytest-cov = "^2.11.1"
coverage = "^5.4"
import-linter = "^1.2.1"
mkdocs-material  = "^7.1.3"
mkdocstrings  = "^0.15.0"
Flask = "^1.1.2"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"

[tool.coverage.run]
source = ["tests", "Roman Discovery"]
